--- a/BackEnd/쿠키와 세션.md
+++ b/BackEnd/쿠키와 세션.md
@@ -1,6 +1,8 @@
-## **📎 쿠키와 세션**
+# **📎 쿠키와 세션**
 
 쿠키와 세션은 HTTP protocol의 약점 보완을 위해 사용한다.
+
+</br>
 
 **HTTP protocol의 특징**
 
@@ -13,9 +15,10 @@
 
 👉 client 단위로 상태 정보를 유지해야 하는 경우 쿠키와 세션이 필요함
 
----
+</br>
+</br>
 
-## **📎 쿠키**
+# **📎 쿠키**
 
 **쿠키의 개념과 특징**
 
@@ -23,11 +26,15 @@
 - 사용자가 별도로 요청하지 않아도 브라우저는 request 시 Request Header를 넣어 자동으로 전송
 - 브라우저마다 저장되는 쿠키는 다름 (서버에서는 브라우저가 다르면 다른 사용자로 인식)
 
+</br>
+
 **쿠키의 사용 목적**
 
 - 세션 관리 : 사용자 아이디, 접속 시간, 장바구니 등 서버가 알아야 할 정보 저장
 - 개인화 : 사용자마다 다르게 그 사람에 적절한 페이지 보여줄 수 있음
 - 트래킹 : 새용자의 행동과 패턴을 분석하고 기록
+
+</br>
 
 **쿠키 사용 예시**
 
@@ -35,6 +42,8 @@
 - 일주일간 다시 보지 않기
 - 최근 검색한 상품들을 광고에 추천
 - 쇼핑몰 장바구니
+
+</br>
 
 **쿠키의 구성 요소**
 
@@ -44,9 +53,11 @@
 - 도메인 : 쿠키를 전송할 도메인
 - 경로 : 쿠키를 전송할 요청 경로
 
+</br>
+
 **쿠키의 동작 방식**
 
-[##_Image|kage@bsm5dW/btrMPmhjMeQ/EZjNaXrztrLYKAWJ7TWbkK/img.png|CDM|1.3|{"originWidth":752,"originHeight":348,"style":"alignLeft","width":598,"height":277}_##]
+![image](https://user-images.githubusercontent.com/59721896/191763143-59785e23-1bac-470d-8607-b620bb07c73f.png)
 
 1.  Client가 Server에 페이지 요청
 2.  Server는 클라이언트의 요청의 유효성 검사 (id, password 검사 등) 후 Cookie를 생성
@@ -55,21 +66,24 @@
 5.  Browser가 종료되어도 Cookie의 유효 기간이 남아있다면 Client는 계속 보관
 6.  동일 사이트 재방문 시 Client의 PC에 해당 Cookie가 있는 경우, 요청 페이지와 함께 Cookie 전송
 
+</br>
+
 #### **Cookie 주요 기능**
 
 | 기능                          | method                                                                                                                           |
 | ----------------------------- | -------------------------------------------------------------------------------------------------------------------------------- |
 | 생성                          | Cookie cookie = new Cookie(String name, String value);                                                                           |
-| 값 변경 / 얻기                | cookie.setValue(String value); String value = cookie.getValue();                                                                 |
-| 사용자 도메인 지정 / 얻기     | cookie.setDomain(String domain); String value = cookie.getDomain();                                                              |
-| 값 범위 지정 / 얻기           | cookie.setPath(String path); String path = cookie.getPath();                                                                     |
-| cookie 유효 기간 지정 / 얻기  | cookie.setMaxAge(int expiry); Int expiry = cookie.getMaxAge(); cookie.setMaxAge(0); // 유효 기간을 0으로 설정하면 쿠키 삭제 가능 |
+| 값 변경 / 얻기                | cookie.setValue(String value);</br>String value = cookie.getValue();                                                                 |
+| 사용자 도메인 지정 / 얻기     | cookie.setDomain(String domain);</br>String value = cookie.getDomain();                                                              |
+| 값 범위 지정 / 얻기           | cookie.setPath(String path);</br>String path = cookie.getPath();                                                                     |
+| cookie 유효 기간 지정 / 얻기  | cookie.setMaxAge(int expiry);</br>Int expiry = cookie.getMaxAge(); cookie.setMaxAge(0); // 유효 기간을 0으로 설정하면 쿠키 삭제 가능 |
 | 생성된 cookie를 client에 전송 | response.addCookie(cookie);                                                                                                      |
 | client에 저장된 cookie 얻기   | Cookie cookies\[\] = request.getCookies();                                                                                       |
 
----
+</br>
+</br>
 
-## **📎 세션**
+# **📎 세션**
 
 **세션의 개념과 특징**
 
@@ -79,14 +93,18 @@
 - 브라우저를 닫거나 서버에서 세션을 삭제했을 때만 삭제되므로, 쿠키보다 보안이 좋다.
 - 각 클라이언트에 고유 session-id를 부여하고, 클라이언트를 구분하여 요구에 맞는 서비스를 제공함
 
+</br>
+
 **세션 사용 예시**
 
 - site 내에서 화면을 이동해도 로그인(사용자 정보)이 유지
 - 장바구니
 
+</br>
+
 **세션 동작 방식**
 
-[##_Image|kage@cutGWC/btrMOQ35d1c/ZDniksMM9YRFjDkMStDRN1/img.png|CDM|1.3|{"originWidth":752,"originHeight":339,"style":"alignLeft","width":586,"height":264}_##]
+![image](https://user-images.githubusercontent.com/59721896/191763198-1ceb2276-cfbb-4182-816a-977cdedbef0b.png)
 
 1.  Client가 Server에 페이지 요청
 2.  Server는 접근한 Client의 Request Header 필드인 Cookie를 확인하고,  
@@ -95,20 +113,23 @@
 4.  Server에서 Client로 준 session-id를 쿠키를 사용해 서버에 저장함 (쿠키 이름: JSESSIONID)
 5.  Client는 재접속 시, 이 JSESSIONID를 이용해서 session-id 값을 Server에 전달함
 
+</br>
+
 **HttpSession 주요 기능**
 
 | 기능             | method                                                                                                                |
 | ---------------- | --------------------------------------------------------------------------------------------------------------------- |
-| 생성             | HttpSession session = request.getSession(); HttpSession session = request.getSession(false);                          |
+| 생성             | HttpSession session = request.getSession();</br>HttpSession session = request.getSession(false);                          |
 | 값 저장          | session.serAttribute(String name, Object value);                                                                      |
 | 값 얻기          | Object obj = session.getAttribute(String name);                                                                       |
-| 값 제거          | session.removeAttribute(String name); // 특정 이름의 속성 제거 session.invalidate(); // 바인딩되어있는 모든 속성 제거 |
+| 값 제거          | session.removeAttribute(String name); // 특정 이름의 속성 제거</br>session.invalidate(); // 바인딩되어있는 모든 속성 제거 |
 | 생성 시간        | long ct = session.getCreationTime();                                                                                  |
 | 마지막 접근 시간 | long lat = session.getLastAccessedTime();                                                                             |
 
----
+</br>
+</br>
 
-## **📎 쿠키와 세션 정리**
+# **📎 쿠키와 세션 정리**
 
 |           | Cookie                                                                                                                    | Session                                                                                                                                                                                                                    |
 | --------- | ------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -117,8 +138,9 @@
 | 저장 형식 | file에 저장되기 때문에 String 형태만 가능                                                                                 | Object는 모두 가능 (일반적으로 Dto, List 등)                                                                                                                                                                               |
 | 사용 예시 | 최근 본 상품 목록, 아이디 저장, 그만 보기 등                                                                              | 로그인 시 사용자 정보, 장바구니 등                                                                                                                                                                                         |
 | 용량 제한 | 도메인당 20개, 1쿠키당 4KB                                                                                                | 제한 없음 (WAS memory 허용까지)                                                                                                                                                                                            |
-| 만료 시점 | 쿠키 저장 시 설정 (설정 없으면 브라우저 종료 시 만료)                                                                     | 알 수 없음 (Client가 로그아웃 하거나, 일정 시간 동안 session에 접근하지 않을 경우 만료) 👉 쿠키와는 다르게, 처음 만든 시간부터 유효 기간을 정하지 않고, 사용자의 마지막 접근 시간으로부터 시간을 측정함 (web.xml에서 설정) |
-| 공통점    | 전역에 저장하기 때문에 project 내의 모든 JSP에서 사용이 가능함 Map 형식으로 관리하기 때문에 key 값의 중복을 허용하지 않음 |                                                                                                                                                                                                                            |
+| 만료 시점 | 쿠키 저장 시 설정</br>(설정 없으면 브라우저 종료 시 만료)                                                                     | 알 수 없음 (Client가 로그아웃 or 일정 시간 session에 접근하지 않으면 만료)</br>👉 쿠키와는 다르게, 처음 만든 시간부터 유효 기간을 정하지 않고,</br>사용자의 마지막 접근 시간으로부터 시간을 측정함 (web.xml에서 설정) |
+
+</br>
 
 **쿠키과 세션의 적절한 사용 방법**
 
